tests/checker/diagnostics/0877_gadt_witness_annotation_mismatch_02.ml.infer.expected
File "0877_gadt_witness_annotation_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0877_gadt_witness_annotation_mismatch_02 is not a valid module name.

File "0877_gadt_witness_annotation_mismatch_02.ml", line 5, characters 28-37:
5 | let _ : bool witness_beta = WInt_beta
                                ^^^^^^^^^
Error: The constructor WInt_beta has type int witness_beta
       but an expression was expected of type bool witness_beta
       Type int is not compatible with type bool
